# stst

./: CMakeLists.txt  glad.c  glad_wgl.c  main.c  stst_math.c
assets/: bucket.ply  cone_q1.ply  cone_q2.ply  cone_q3.ply  cube.ply  default.fragment  default.vertex  gear.ply  sphere_q1.ply  sphere_q2.ply  sphere_q3.ply
include/glad/: glad.h  glad_wgl.h
